# MediumBlogExamples

./: README.md
DependencyInjectionInPython3/: Pipfile  README.md  tox.ini
DependencyInjectionInPython3/no_dependency_inversion/: main.py  message_formatter.py  message_writer.py
DependencyInjectionInPython3/with_dependency_injection_framework/: container.py  message_writer.py  test_message_writer_with_dependency_injection_framework.py
DependencyInjectionInPython3/with_dependency_inversion/: main.py  message_writer.py
DjangoQueryProfilerExample/: README.md  db_data.json  pyproject.toml
DjangoQueryProfilerExample/blogs/: models.py  urls.py  views.py
DjangoQueryProfilerExample/blogs/migrations/: 0001_initial.py
DjangoQueryProfilerExample/example/: settings.py  urls.py
ToxicWorkEnvironment/: README.md  pyproject.toml  python_version_printer.py  test_python_version_printer.py  tox.ini
