[tool.poetry]
name = "djangoqueryprofilerexample"
version = "0.1.0"
description = ""
authors = ["Drew Budwin <drew@budw.in>"]

[tool.poetry.dependencies]
python = "^3.8"
django-query-profiler = "^0.6"
Django = "^3.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
